--- a/port.css
+++ b/port.css
@@ -1,4 +1,5 @@
 body {
+  margin: 0%;
   font-family: "Merriweather", serif;
 }
 
@@ -12,10 +13,19 @@ h1 {
 .half-width {
   width: 40%;
   float: left;
-  margin-left: 5%;
+  margin-top: 2%;
+  margin-left: 8%;
   padding-left: 2%;
 }
 
 .half-width img {
-  width: 100%;
+  width: 80%;
+  text-align: right;
+}
+.top-banner {
+  background-image: url("images/top-banner.png");
+  background-repeat: no-repeat;
+}
+section {
+  height: 500px;
 }
